--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.AndroidCalculator" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/material_dynamic_primary40</item>
     </style>
 
     <style name="Theme.AndroidCalculator" parent="Base.Theme.AndroidCalculator" />
+
 </resources>
