Android Calculator: Remove the corner Radius, to make the buttons square shape and changed the background color of the layout containing the buttons layouts

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/material_dynamic_primary30"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,45 +23,45 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:text="C"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp"
+                app:cornerRadius="0dp"
                 app:elevation="3dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="( )"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp"
+                app:cornerRadius="0dp"
                 app:elevation="3dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text=")"
+                android:text="%"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp"
+                app:cornerRadius="0dp"
                 app:elevation="3dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:text="/"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp"
+                app:cornerRadius="0dp"
                 app:elevation="3dp" />
 
 
@@ -74,42 +75,50 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
                 android:layout_weight="1"
                 android:text="7"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
                 android:layout_weight="1"
                 android:text="8"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
                 android:layout_weight="1"
                 android:text="9"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
                 android:layout_weight="1"
                 android:text="X"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
 
         </LinearLayout>
@@ -122,42 +131,42 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="4"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="5"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text=")"
+                android:text="6"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="/"
+                android:text="-"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
 
         </LinearLayout>
@@ -170,42 +179,42 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="1"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="2"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text=")"
+                android:text="3"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="/"
+                android:text="+"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
 
         </LinearLayout>
@@ -218,42 +227,42 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="+/-"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="C"
+                android:text="0"
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text=")"
+                android:text=","
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_margin="15dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:text="/"
+                android:text="="
                 android:textColor="@color/white"
                 android:textSize="32sp"
-                app:cornerRadius="50dp" />
+                app:cornerRadius="0dp" />
 
 
         </LinearLayout>
